<resources>
    <string name="app_name">ValidApp</string>
    <string name="title_activity_principal_page">PrincipalPage</string>
    <string name="tab_text_1">Top Artistas</string>
    <string name="tab_text_2">Top Canciones</string>
    <string name="iniciar">INICIAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
